# C-Programacion-Estructurada

./: CMakeLists.txt  README.md  main.c
Ejercicio1/: Ejercicio1.c  Ejercicio1.h
Ejercicio2/: Ejercicio2.c  Ejercicio2.h
Ejercicio3/: Ejercicio3.c  Ejercicio3.h
Ejercicio4/: Ejercicio4.c  Ejercicio4.h
Ejercicio5/: Ejercicio5.c  Ejercicio5.h
